--- a/bioSite.css
+++ b/bioSite.css
@@ -1,1 +1,31 @@
+header {
+  background-color: #5CS044;
+  color: white;
+  padding: 20px;
+  text-align: center;
+}
+
+h1 {
+  font-weight: 400;
+}
+
+#navbar {
+  overflow: hidden;
+  background-color: #332F2C;
+  border-bottom: #C28242;
+}
+
+#navbar a {
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+}
+
+#navbar a: hover {
+  background-color: #F58C22;
+  color: black;
+}
 
