--- a/bioSite.css
+++ b/bioSite.css
@@ -34,3 +34,12 @@ h1 {
   margin-left: 5%;
   margin-right: 5%;
   padding: 10px;
+}
+
+#image-gallery img {
+  max-width: 100%;
+  max-height: 300px;
+  height: auto;
+  object-fit: contain;
+  margin-bottom: 10px;
+}
