--- a/bioSite.css
+++ b/bioSite.css
@@ -45,8 +45,7 @@ footer {
 
 #image-gallery img {
   max-width: 50%;
-  max-height: 50px;
+  max-height: 50%;
   height: auto;
-  object-fit: contain;
   margin-bottom: 10px;
 }
