--- a/bioSite.css
+++ b/bioSite.css
@@ -44,8 +44,6 @@ footer {
 }
 
 #image-gallery img {
-  max-width: 50%;
-  max-height: 50%;
-  height: auto;
-  margin-bottom: 10px;
+  width: 50%;
+  height: 50%;
 }
