--- a/bioSite.css
+++ b/bioSite.css
@@ -48,6 +48,9 @@ footer {
 portrait-img {
   width: 200px;
   height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 hobbies-img {
   width: 50%;
