--- a/bioSite.css
+++ b/bioSite.css
@@ -22,29 +22,24 @@ h1 {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
+  transition: background-color 0.3s;
 }
 
-#navbar a: hover {
+#navbar a:hover {
   background-color: white;
   color: black;
 }
 
 footer {
   background-color: #5c5044;
-  position: absolute;
+  padding: 10px 0;
+  position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   height: 15px;
-  margin-top: auto;
+  
 }
-
-#container {
-  margin-top: 2%;
-  margin-left: 5%;
-  margin-right: 5%;
-  padding: 10px;
-}
-
 .portrait-img {
   width: 25px;
   height: auto;
@@ -55,10 +50,17 @@ footer {
 .hobbies-img {
   width: 50%;
   height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .goals-img {
   width: 50%;
   height: auto;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  margin-bottom: 20px;
 }
 
 .bio {
