--- a/bioSite.css
+++ b/bioSite.css
@@ -40,21 +40,21 @@ footer {
   height: 15px;
   
 }
-.portrait-img {
+.portrait-img img{
   width: 25px;
   height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
-.hobbies-img {
+.hobbies-img img{
   width: 50%;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.goals-img {
+.goals-img img{
   width: 50%;
   height: auto;
   display: flex;
