--- a/bioSite.css
+++ b/bioSite.css
@@ -38,23 +38,25 @@ footer {
   left: 0;
   width: 100%;
   height: 15px;
-  
 }
-.portrait-img img{
+footer p {
+  bottom: 10px;
+}
+.portrait-img img {
   width: 25%;
   height: auto;
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
-.hobbies-img img{
+.hobbies-img img {
   width: 25%;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.goals-img img{
+.goals-img img {
   width: 40%;
   height: auto;
   margin-right: 10px;
