--- a/bioSite.css
+++ b/bioSite.css
@@ -79,6 +79,8 @@ h2 {
     color: #f58c22;
     font-size: 18px; 
     animation: fadeInOut 3s infinite;
+    position: relative;
+    bottom: 18px;
 }
 
 /* Keyframes for fade in and out animation */
