--- a/bioSite.css
+++ b/bioSite.css
@@ -69,7 +69,7 @@ footer p {
   margin-top: 20px;
 }
 .goals-img img:last-child {
-  margin-right: 0;
+  margin-right: 0px;
 }
 h2 {
   text-align: center;
