--- a/bioSite.css
+++ b/bioSite.css
@@ -33,7 +33,7 @@ h1 {
 footer {
   background-color: #5c5044;
   padding: 10px 0;
-  position: sticky;
+  position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
