--- a/bioSite.css
+++ b/bioSite.css
@@ -92,3 +92,6 @@ h2 {
 body {
     margin-bottom: 18px; /* Adjust this value to the height of your footer */
 }
+#container {
+  padding-bottom: 20px;
+  margin-bottom: 15px;
