--- a/bioSite.css
+++ b/bioSite.css
@@ -58,6 +58,13 @@ footer p {
   flex-direction: column;
   align-items: center;
 }
+.hobbies {
+  flex-grow: 1;
+  padding-left: 30%;
+  margin-top: 0;
+  align-self: start;
+}
+  
 .goals-img img {
   width: 60%;
   height: auto;
