--- a/bioSite.css
+++ b/bioSite.css
@@ -50,6 +50,7 @@ footer p {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-top: 20px;
 }
 .hobbies-img img {
   width: 25%;
