--- a/bioSite.css
+++ b/bioSite.css
@@ -60,9 +60,8 @@ footer p {
   align-items: center;
 }
 .hobbies {
-  flex-grow: 1;
   padding-left: 30%;
-  margin-top: 0;
+  margin-top: 30px;
   align-self: start;
 }
   
