--- a/bioSite.css
+++ b/bioSite.css
@@ -85,6 +85,7 @@ h2 {
     color: #f58c22;
     font-size: 18px; 
     animation: fadeInOut 3s infinite;
+    bottom: 5px;
 }
 
 /* Keyframes for fade in and out animation */
