--- a/bioSite.css
+++ b/bioSite.css
@@ -61,8 +61,9 @@ footer p {
 }
 .hobbies {
   padding-left: 30%;
-  margin-top: 0;
-  align-self: flex-start;
+  margin-top: -20%;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  transition: 0.3s;
 }
   
 .goals-img img {
