--- a/bioSite.css
+++ b/bioSite.css
@@ -64,6 +64,7 @@ footer p {
   margin-top: -20%;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
+  font-weight: bold;
 }
   
 .goals-img img {
