--- a/bioSite.css
+++ b/bioSite.css
@@ -3,6 +3,10 @@ header {
   color: white;
   padding: 20px;
   text-align: center;
+  font-family: impact, sans-serif;
+  font-size: 28px;
+  text-shadow: 5px 5px black;
+
 }
 
 h1 {
@@ -21,8 +25,8 @@ h1 {
   color: white;
   text-align: center;
   padding: 14px 16px;
-  text-decoration: none;
   transition: background-color 0.3s;
+  text-decoration: none;
 }
 
 #navbar a:hover {
@@ -43,6 +47,7 @@ footer p {
   position: relative;
   bottom: 10px;
   align-items: center;
+  color: #c28242;
 }
 .portrait-img img {
   width: 20%;
@@ -52,32 +57,57 @@ footer p {
   margin-right: auto;
   margin-top: 20px;
 }
+.bio {
+  box-shadow: 2px 4px 8px 4px #332f2c;
+  padding: 1%;
+  margin-left: 25px;
+  margin-right: 25px;
+  margin-top: 25px;
+
+}
 .hobbies-img img {
-  width: 25%;
+  width: 18%;
   height: auto;
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding-top: 25px;
 }
 .hobbies {
-  padding-left: 30%;
-  margin-top: -40%;
-  
-  
+  margin-left: 23%;
+  margin-top: -25%;
+  box-shadow: 2px 4px 4px 4px #332f2c;
+  margin-right: 30px;
+  padding: 1%;
 }
-  
-.goals-img img {
-  width: 60%;
+.business img {
   height: auto;
-  margin-right: 5px;
-  margin-leftL: 30%;
+  width: 70%;
+  padding-left: 45px;
+  padding-bottom: 20px;
+}
+.homeowner img {
+  height: auto;
+  width: 100%;
+  padding-left: 20px;
+}
+.food img {
+  height: auto;
+  width: 85%;
+  padding-left: 45px;
 }
 .goals-img {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-top: 20px;
-  margin-left: auto;
+  gap: 75px;
+}
+.goals {
+  box-shadow: 2px 4px 4px 4px #332f2c;
+  padding: 1%;
+  margin-left: 25px;
+  margin-right: 25px;
 }
 h2 {
   text-align: center;
@@ -87,7 +117,7 @@ h2 {
     color: #f58c22;
     font-size: 18px; 
     animation: fadeInOut 3s infinite;
-    margin-top: 5px;
+    margin-top: -8px;
 }
 
 /* Keyframes for fade in and out animation */
@@ -101,4 +131,9 @@ body {
 #container {
   padding-bottom: 100px;
   margin-bottom: 15px;
+}
+#navbar a.active {
+  text-decoration: underline;
+  background-color: #f58c22;
+  color: black;
 }
